Fix overflow bug in swiper mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body, .your-swiper-container-class {
+body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -106,6 +106,10 @@ code {
 .swiper-slide {
     height: auto !important;
     display: flex;
+}
+
+.swiper-container {
+    overflow: hidden;
 }
 
 
